removed copyright fix font weight light mode default to dark mode

--- a/docs/site/src/css/custom.css
+++ b/docs/site/src/css/custom.css
@@ -122,7 +122,6 @@
 /** navbar overrides */
 [data-theme="light"] .menu__link {
   color: #525860;
-  font-weight: lighter;
 }
 
 [data-theme="light"] .menu__link--active {
